<resources>
    <string name="app_name">Quotify</string>
    <string name="search_with_keyword">Search with keyword</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quote">Make A Quote</string>
    <string name="next">Next</string>
    <string name="what_s_on_your_mind">what\'s on your mind..</string>
    <string name="fonts">fonts</string>
    <string name="shadow">shadow</string>
    <string name="color">color</string>
    <string name="style">style</string>
    <string name="size">size</string>
    <string name="select">Select</string>
    <string name="give_your_thoughts_a_meaning">\"Give your thoughts a context\"</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="quotify">Quotify</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="log_in_your_account">Login to your account</string>
    <string name="already_signed_up_click_here_to_login">Already Signed Up ? Click here to Login.</string>
    <string name="not_signed_up_click_here_to_signup">Don\'t have an account ? Click here to SignUp.</string>
    <string name="fav_quote_instruction">Write a quote here which you think is great.</string>
    <string name="my_account">My Account</string>
    <string name="email_password_logout_amp_more"><![CDATA[Email,Password,Logout & more]]></string>
    <string name="your_quote_status_followers_privacy">Your quote status,followers,privacy</string>
    <string name="my_preferences">My Preferences</string>
    <string name="my_keep">My Keep</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="contact_us_faqs_about_us_policies_amp_more"><![CDATA[Contact us,FAQs,about us,policies & more]]></string>
    <string name="made_with_love_in_india">Made with ❤ in India</string>
    <string name="profile">Profile</string>
    <string name="save">save</string>
    <string name="share_this_to">Share this to</string>
    <string name="post_on_feed">Post on feed</string>
    <string name="add_to_keep">Add to Keep</string>
</resources>