<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageResultActivity"
    android:background="@color/primary_dark">

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/result_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toTopOf="@id/img_result_bottom_sheet"/>

    <RelativeLayout
        android:id="@+id/img_result_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bottom_sheet_top_curved"
        android:elevation="5dp">

        <RelativeLayout
            android:id="@+id/result_keep_post_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:elevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground">
            <ImageButton
                android:id="@+id/result_keep_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_my_keep"
                android:backgroundTint="@color/primary_dark"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/result_keep_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_keep"
                android:layout_below="@id/result_keep_btn"
                android:textColor="@color/primary_dark"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/result_feed_post_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground">

            <ImageButton
                android:id="@+id/result_feed_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_feed_post"
                android:backgroundTint="@color/primary_dark"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/result_feed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_on_feed"
                android:layout_below="@id/result_feed_btn"
                android:textColor="@color/primary_dark"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/result_share_post_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:elevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground">
            <ImageButton
                android:id="@+id/result_share_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_post_share"
                android:backgroundTint="@color/primary_dark"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/result_share_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_this_to"
                android:layout_below="@id/result_share_btn"
                android:textColor="@color/primary_dark"
                android:textSize="12sp"/>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>